working on api integration

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -13,10 +13,8 @@
   "please_enter_your": "Please enter your email and password below.",
   "email": "Email",
   "empty_email": "Empty email.",
-  "invalid_email": "Invalid email.",
   "password": "Password",
   "empty_password": "Empty password.",
-  "invalid_password": "Invalid password.",
   "forgot_password": "Forgot password?",
   "sign_in": "Sign in",
   "don_t_have_an_account": "Don’t have an account?",
@@ -24,11 +22,8 @@
   "create_your_account": "Create your account",
   "please_select_the_desired_method": "Please select the desired method for sign in to create your account.",
   "first_name": "First Name",
-  "empty_first_name": "Empty first name.",
   "last_name": "Last Name",
-  "empty_last_name": "Empty last name.",
   "confirm_password": "Confirm Password",
-  "empty_confirm_password": "Empty confirm password.",
   "passwords_do_not_match": "Passwords do not match.",
   "create_my_account": "Create my account",
   "verify_email_id": "Verify Email Id",
@@ -123,5 +118,16 @@
   "add_new": "Add New",
   "your_patatoche_is_now": "Your Patatoche is now ready to guard your memories!",
   "go_to_home": "Go to Home",
-  "audio": "Audio"
+  "audio": "Audio",
+  "please_enter_your_first_name": "Please enter your first name",
+  "please_enter_your_last_name": "Please enter your last name",
+  "please_enter_your_email": "Please enter your email",
+  "invalid_email_address": "Invalid email address",
+  "please_enter_your_password": "Please enter your password",
+  "please_enter_your_confirm_password": "Please enter your confirm password",
+  "password_must_be_at_least": "Password must be at least 8 characters long, contain at least one uppercase letter, one lowercase letter, one number, and one special character.",
+  "something_went_wrong": "Something went wrong",
+  "logout_": "Logout ?",
+  "are_you_sure_you_want_to_logout": "Are you sure you want to logout?",
+  "yes": "Yes"
 }
